[package]
name = "stamper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.13.0", features = ["full"] }
serde_json = "1.0.96"
url = "2.3.1"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tsl = "1.0.3"
rand = "0.8.5"
chrono = "0.4.24"
rusqlite = { version = "0.29.0", features = ["bundled"] }

